--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div>
             <div
               id="output"
-              class="w-full md:h-[500px] resize-none py-6 px-10 rounded-br-lg text-2xl bg-white break-words text-xl"
+              class="w-full md:h-[500px] resize-none py-6 px-8 rounded-br-lg text-2xl bg-white break-words text-xl overflow-y-scroll"
               disabled
             ></div>
           </div>
