23 Jun 2023: attempt at improving responsiveness

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 id="input"
                 maxlength="150"
                 placeholder="Type your favorite line"
-                class="w-full resize-none py-6 px-6 lg:px-10 md:h-[500px] md:overflow-hidden rounded-bl-lg md:border-r text-2xl focus:outline-none md:focus:outline-offset-0 md:focus:outline-blue-500 placeholder:text-xl lg:placeholder:text-2xl placeholder:text-gray-600"
+                class="w-full resize-none pt-6 pb-40 md:py-6 px-6 lg:px-10 md:h-[500px] overflow-hidden rounded-bl-lg md:border-r text-xl md:text-2xl focus:outline-none md:focus:outline-offset-0 md:focus:outline-blue-500 placeholder:text-xl lg:placeholder:text-2xl placeholder:text-gray-600"
               ></textarea>
             </form>
           </div>
@@ -124,8 +124,7 @@
           <div>
             <div
               id="output"
-              class="w-full md:h-[500px] resize-none py-6 px-8 rounded-br-lg text-2xl bg-white break-words text-xl overflow-y-scroll"
-              disabled
+              class="w-full max-h-[250px] md:max-h-[500px] md:h-[500px] resize-none py-6 px-8 rounded-br-lg text-2xl bg-white break-words text-xl overflow-y-scroll"
             ></div>
           </div>
         </div>
